--- a/src/Application/TwitterBundle/Resources/config/doctrine/Tweet.orm.yml
+++ b/src/Application/TwitterBundle/Resources/config/doctrine/Tweet.orm.yml
@@ -14,4 +14,6 @@ Application\TwitterBundle\Entity\Tweet:
         user:
             type: string
             length: 255
+        date_added:
+            type: datetime
     lifecycleCallbacks: {  }
